2004-04-28  Michael Meeks  <michael@ximian.com>

	* Version 2.4.4

2004-04-28  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-dock-band.c (check_guint_arg):
	add pre-condition.

	* bonobo/bonobo-dock-item.c (check_guint_arg): 
	add pre-condition.
	(get_preferred_height, get_preferred_width): return 0
	if we have no child; odd.

2004-01-07  Michael Meeks  <michael@ximian.com>

	* Version 2.4.3

2003-12-30  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-control.c (impl_Bonobo_Control_activate): Ahem,
	flip my reversed condition.

2003-12-30  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-control.c (impl_Bonobo_Control_activate): Fixed
	the emission logic; actually test against the old activation
	state.  Also, call bonobo_control_activate_notify() to notify the
	control frame.

2003-12-09  Michael Meeks  <michael@ximian.com>

	* Version 2.4.2

2003-12-06  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): add keys test.

	* bonobo/bonobo-ui-engine.c
	(impl_emit_verb_on, impl_emit_event_on): inhibit
	event / verb emission on insensitive command nodes,
	fixes keybindings problem; thanks to Chris Toshok.

2003-10-29  Michael Meeks  <michael@ximian.com>

	* Makefile.am (DISTCLEANFILES): add .

2003-10-29  Michael Meeks  <michael@ximian.com>

	* Version 2.4.1

2003-10-29  Steve Chaplin  <stevech1097@yahoo.com.au>

	* configure.in: add setup for PKG_CONFIG,
	fixing configure bug.

2003-10-08  Mark McLoughlin  <mark@skynet.ie>

	* COPYING.LIB: added LGPL. COPYING is GPL.

2003-10-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mr" to ALL_LINGUAS.

2003-09-28  Gediminas Paulauskas  <menesis@delfi.lt>

	* configure.in: Added lt to ALL_LINGUAS.

2003-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-sync-menu.h:
	* bonobo/bonobo-ui-sync-toolbar.h: Added missing
	prototypes to get rid of warnings. Fixes bug #122757.

2003-09-15  Martin Kretzschmar  <m_kretzschmar@gmx.net>
